style: fix input, disable scrollbar
Input was showing a bit off the screen on the bottom

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,20 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+	display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+	/* IE and Edge */
+	-ms-overflow-style: none;
+
+	/* Firefox */
+	scrollbar-width: none;
+}
+
 :root {
 	--bg: #002B36;
 	--fg: #073642;
